--- a/blog/templates/accounts/profile.html
+++ b/blog/templates/accounts/profile.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>프로필</title>
-</head>
-<body>
-    <h1>프로필 페이지입니다.</h1>
+여기는 마이페이지 - 회원정보 탭 입니다
+
+회원정보 탭 입니다  ( 프로필 )
+
+1. 회원가입 시 지정한 이미지 
+2. 회원 이름 
+3. 회원 아이디 
+4. 회원 소개 
+5. 회원 관심사 
+6. 페이스북 아이디 / 인스타 아이디 
+
+같은게 표시될 수 있지만 5번까지만 적어두도록 하자 
+
+여기서 연결될 수 있는 것은 
+같은 mypage
+
+<h1>프로필 페이지입니다.</h1>
     <p>{{user}}의 프로필 페이지입니다.</p>
-</body>
-</html>
