--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -57,7 +57,10 @@
                                     <a class="nav-link" href="blog/" >Blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="friends.html">Friends</a>
+                                    <a class="nav-link" href="friends/">Friends</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/">MyPage</a>
                                 </li>
                             </ul>
                         </div>
@@ -92,7 +95,7 @@
                                 {% endif %}
                                 {% if user.is_authenticated %}
                                 <div class="banner_btn_iner">
-                                    <a href="accounts/login/" class="btn_2"> 블로그로 이동 <img src="{% static 'img/icon/left_1.svg' %}" alt=""></a>
+                                    <a href="blog/" class="btn_2"> 블로그로 이동 <img src="{% static 'img/icon/left_1.svg' %}" alt=""></a>
                                 </div>
                                 {% endif %}
                             </div>
