--- a/blog/templates/blog/post_list_friends.html
+++ b/blog/templates/blog/post_list_friends.html
@@ -57,8 +57,14 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'blog:post_list_friend' %}">Friends</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">MyPage</a>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        MyPage
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="blog.html">프로필</a>
+                                        <a class="dropdown-item" href="single-blog.html">친구관리</a>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
