--- a/blog/static/css/all.css
+++ b/blog/static/css/all.css
@@ -4295,7 +4295,7 @@ readers do not read off random characters that represent icons */
   position: static;
   width: auto; }
 @font-face {
-  font-family: 'Font Awesome 5 Brands';
+  font-family: 'SDSamliphopangche_Outline';
   font-style: normal;
   font-weight: normal;
   font-display: auto;
@@ -4303,9 +4303,9 @@ readers do not read off random characters that represent icons */
   src: url("../webfonts/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-brands-400.woff2") format("woff2"), url("../webfonts/fa-brands-400.woff") format("woff"), url("../webfonts/fa-brands-400.ttf") format("truetype"), url("../webfonts/fa-brands-400.svg#fontawesome") format("svg"); }
 
 .fab {
-  font-family: 'Font Awesome 5 Brands'; }
+  font-family: 'SDSamliphopangche_Outline'; }
 @font-face {
-  font-family: 'Font Awesome 5 Free';
+  font-family: 'SDSamliphopangche_Outline';
   font-style: normal;
   font-weight: 400;
   font-display: auto;
@@ -4313,10 +4313,10 @@ readers do not read off random characters that represent icons */
   src: url("../webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("../webfonts/fa-regular-400.woff2") format("woff2"), url("../webfonts/fa-regular-400.woff") format("woff"), url("../webfonts/fa-regular-400.ttf") format("truetype"), url("../webfonts/fa-regular-400.svg#fontawesome") format("svg"); }
 
 .far {
-  font-family: 'Font Awesome 5 Free';
+  font-family: 'SDSamliphopangche_Outline';
   font-weight: 400; }
 @font-face {
-  font-family: 'Font Awesome 5 Free';
+  font-family: 'SDSamliphopangche_Outline';
   font-style: normal;
   font-weight: 900;
   font-display: auto;
@@ -4325,5 +4325,5 @@ readers do not read off random characters that represent icons */
 
 .fa,
 .fas {
-  font-family: 'Font Awesome 5 Free';
+  font-family: 'SDSamliphopangche_Outline';
   font-weight: 900; }
