--- a/blog/templates/accounts/login.html
+++ b/blog/templates/accounts/login.html
@@ -1,3 +1,5 @@
+
+
 {% load static %}
 
 <!doctype html>
@@ -7,7 +9,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MyTube - pageList </title>
+    <title> My Youtube Life </title>
     <link rel="icon" href="{% static 'img/favicon.png' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -32,20 +34,30 @@
 
 <body>
     <!--::header part start::-->
-    <header class="main_menu">
+    <header class="main_menu home_menu">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="/"> <img src="{% static 'img/logo.png' %}" alt="logo" style="width: 60%;"> </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        {% if user.is_authenticated %}
+                        <a class="navbar-brand " href="/"> <img src="{% static 'img/logo.png' %}" alt="logo" style = "width : 80%"> </a>
+                        {% endif %}
+                        {% if not user.is_authenticated %}
+                        <a class="navbar-brand " href="/"> <img src="{% static 'img/logo.png' %}" alt="logo" style = "width : 30%"> </a>
+                        {% endif %}
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse main-menu-item text-center" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
+
+                        <div class="collapse navbar-collapse main-menu-item justify-content-end"
+                            id="navbarSupportedContent">
+                            <ul class="navbar-nav " style = "margin-right: 30%; font : bold">
                                 <li class="nav-item">
                                     <a class="nav-link" href="/">Home</a>
                                 </li>
+                                {% if user.is_authenticated %}
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'blog:post_list' %}">Blog</a>
                                 </li>
@@ -61,111 +73,53 @@
                                         <a class="dropdown-item" href="{% url 'accounts:friendList' %}">친구 관리</a>
                                         <a class="dropdown-item" href="{% url 'accounts:logout' %}">로그아웃</a>
                                     </div>
-                                </li>
+                                </li>  
+                                {% endif %}                              
                             </ul>
-                        </div>
+                        </div>                        
                     </nav>
                 </div>
-            </div> 
+            </div>
         </div>
     </header>
-    
     <!-- Header part end-->
 
-    <!--================Blog Area =================-->
-    <section class="blog_area">        
-        <div class="container">            
-            <div class="row">
-                <div class="col-lg-8 mb-5 mb-lg-0">
-                    <div class="blog_left_sidebar">
-                        <!--    one blog 반복되는 구간    -->
-                        {% for post in post_list %}
-                        <article class="blog_item">
-                            <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="{{ post.image_url }}" alt="" style="height: 200px; object-fit: cover; object-position: center;">
-                                <a href="#" class="blog_item_date">
-                                    <h3> {{ post.created_day }}</h3>
-                                    <p>{{ post.created_month }}</p>
-                                </a>
-                            </div>
-
-                            <div class="blog_details">
-                                <a class="d-inline-block" href="{% url 'blog:post_detail' post.pk %}">
-                                    <h2>{{ post.title }}</h2>
-                                </a>
-                                <p class="post-content" data-full-content="{{ post.content }}">{{ post.short_content }}...... </p>
-                                <p> 관련어 : {% for tag in post.tags.all %}
-                                    {{tag.name}} , 
-                                {% endfor %} </p>
-                            </div>
-                        </article>
-                        {% endfor %}
-
-                        
-                        <!-- 페이지 번호 구현 부분 -->
-                        <nav class="blog-pagination justify-content-center d-flex">
-                            <ul class="pagination">
-                                {% if posts.has_previous %}
-                                    <li class="page-item">
-                                        <a href="?page=1" class="page-link" aria-label="First">
-                                            <i class="ti-angle-left"></i>
-                                        </a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a href="?page={{ posts.previous_page_number }}" class="page-link" aria-label="Previous">
-                                            <i class="ti-angle-left"></i>
-                                        </a>
-                                    </li>
-                                {% endif %}
-                                
-                                {% for i in posts.paginator.page_range %}
-                                    <li class="page-item{% if i == posts.number %} active{% endif %}">
-                                        <a href="?page={{ i }}" class="page-link">{{ i }}</a>
-                                    </li>
-                                {% endfor %}
-                                
-                                {% if posts.has_next %}
-                                    <li class="page-item">
-                                        <a href="?page={{ posts.next_page_number }}" class="page-link" aria-label="Next">
-                                            <i class="ti-angle-right"></i>
-                                        </a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a href="?page={{ posts.paginator.num_pages }}" class="page-link" aria-label="Last">
-                                            <i class="ti-angle-right"></i>
-                                        </a>
-                                    </li>
-                                {% endif %}
-                            </ul>
-                        </nav>
-                    </div>
-                </div>
-                <div class="col-lg-4"> <!-- 사이드바에서 검색 -->
-                    <div class="blog_right_sidebar">
-                        <aside class="single_sidebar_widget search_widget">    
-                            <form action="" method = "GET">
-                                <div class="form-group">
-                                    <div class="input-group mb-3">
-                                        <input type="text" class="form-control" placeholder='Search Keyword'
-                                            onfocus="this.placeholder = ''"
-                                            onblur="this.placeholder = 'Search Keyword'"
-                                            name = "q"
-                                            value = "{{ request.GET.q }}">
-                                    </div>
+    <!-- banner part start-->
+    <section class="banner_part">
+        <div class="container">
+            <div class="row align-items-start">
+                <div class="col-lg-6">
+                    <div class="banner_text">
+                        <div class="banner_text_iner">
+                            <form method="post" class="custom-login-form" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="custom-login-field">
+                                    <div class = "col-md-6"> {{ form.username.label_tag }} </div>
+                                    <div class = "col-md-6"> {{ form.username }} </div>
                                 </div>
-                                <button class="button rounded-0 primary-bg text-white w-100 btn_4"
-                                    type="submit">Search</button>
-                            </form>
-                        </aside>
+                                <br/>
+                                <div class="custom-login-field">
+                                    <div class = "col-md-8"> {{ form.password.label_tag }} </div>  
+                                    <div class = "col-md-8"> {{ form.password }} </div>  
+                                </div>
+                                <br/>
+                                
+                                <button type="submit" class="btn btn-primary rounded rounded-pill primary-bg text-white w-30 btn_4 col-md-6" style="border: none;"> 로그인 </button>
+                                
 
-                        
+                                
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!--================Blog Area =================-->
+    <!-- banner part start-->
 
+    
+
+    <!-- footer part start-->
     <footer class="footer-area">
         <div class="container">
             <div class="row">
@@ -218,7 +172,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         </div>
     </footer>
     <!-- footer part end-->
-    
+
     <!-- jquery plugins here-->
     <!-- jquery -->
     <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
@@ -239,7 +193,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="{% static 'js/gijgo.min.js' %}"></script>
     <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
     <!-- custom js -->
-    <script src="{% static 'js/custom.js' %}"></script>    
-    </body>
-    
-    </html>
+    <script src="{% static 'js/custom.js' %}"></script>
+</body>
+
+</html>
