--- a/blog/templates/blog/post_write.html
+++ b/blog/templates/blog/post_write.html
@@ -7,7 +7,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>MyTube - pageList </title>
+    <title> MyTube - 글 작성  </title>
     <link rel="icon" href="{% static 'img/favicon.png' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
@@ -53,7 +53,7 @@
                                     <a class="nav-link" href="{% url 'blog:post_list_friend' %}">Friends</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         MyPage
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -72,62 +72,51 @@
     <!-- Header part end-->
 
 <!--================Blog Area =================-->
-<section class="blog_area single-post-area section_padding">
+<section class="blog_area single-post-area">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 posts-list">
             <div class="single-post">
-                <div class="feature-img">
-                    <img class="card-img rounded-0" src="{{ post.image_url }}" alt="" style="width: 60%;" >
-                </div>
-                <div class="blog_details">
-                    <h2>{{ post.title }}</h2>
-                    <p> 조회수 {{post.view_count}} </p>                  
-                    <p class="excert">
-                        {{ post.content }}
-                    </p>                    
-                </div>
-            </div>      
-
-            
-            <div class="comments-area">
-                <h4>Comments</h4>
-                <div class="comment-list">
-                    {% for comment in post.comments.all %}
-                    <div class="single-comment justify-content-between d-flex">
-                        <div class="user justify-content-between d-flex">
-                            <div class="thumb">
-                                <img src="{% static 'img/comment/comment_1.png' %}" alt="">
-                            </div>
-                            <div class="desc">
-                                <p class="comment">
-                                    {{comment.message}}
-                                </p>
-                                <div class="d-flex justify-content-between">
-                                    <div class="d-flex align-items-center">
-                                        <h5>
-                                            <a href="#">{{comment.author}}</a>
-                                        </h5>
-                                        <p class="date">{{comment.updated_at}}</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-            
-            <section>
-                <h3>댓글 작성</h3>
-                <form action="{% url 'blog:comment_new' post.pk %}" method="post">
-                    {% csrf_token %}
-                    {{ comment_form.as_p }}
-                    <input type="submit" value="댓글 작성">
-                </form>
-            </section>
-            
-            </div>
+              <div class="col-12">
+                <h2 class="contact-title"> 글 작성 </h2>
+              </div>
+              <div class="col-12">
+                <form method="post" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  <table class="col-8">
+                    <tr>
+                        <th>글 제목</th>
+                        <td><input type="text" name="title" id="title" class="form-control"  onfocus="this.placeholder = ''" onblur="this.placeholder = '리뷰 제목을 적어주세요'"
+                          placeholder="리뷰 제목을 적어주세요"/></td>
+                    </tr>
+                    <tr>
+                        <th>영상 리뷰 </th>
+                        <td>
+                            <textarea name="content" id="content" class="form-control w-100" cols="30" rows="9"
+                                onfocus="this.placeholder = ''" onblur="this.placeholder = '영상에 대한 리뷰를 적어주세요'"
+                                placeholder="영상에 대한 리뷰를 적어주세요" ></textarea>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>영상 주소 </th>
+                        <td><input type="text" name="movieAd" id="movieAd" class="form-control" onfocus="this.placeholder = ''" onblur="this.placeholder = '영상 주소를 적어주세요'"
+                          placeholder="영상 주소를 적어주세요"/></td>
+                    </tr>
+                    <tr>
+                        <th> 썸네일 </th>
+                        <td><input type="file" name="thumb_image" id="thumb_image" /></td>
+                    </tr>
+                  </table>
+                  <button type="submit" class="btn btn-primary rounded rounded-pill primary-bg text-white w-20 btn_4 mb-10" style="border: none; margin-bottom: 30px;">작성 완료</button>
+                </form>           
+                
+                </div>             
+                
+                
+                
+                
+            </form>
+            </div>    
         </div>
     </div>
 </section>
