--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -37,7 +37,12 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="{% static 'img/logo.png' %}" alt="logo"> </a>
+                        {% if user.is_authenticated %}
+                        <a class="navbar-brand " href="/"> <img src="{% static 'img/logo.png' %}" alt="logo" style = "width : 80%"> </a>
+                        {% endif %}
+                        {% if not user.is_authenticated %}
+                        <a class="navbar-brand " href="/"> <img src="{% static 'img/logo.png' %}" alt="logo" style = "width : 30%"> </a>
+                        {% endif %}
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -46,27 +51,30 @@
 
                         <div class="collapse navbar-collapse main-menu-item justify-content-end"
                             id="navbarSupportedContent">
-                            <ul class="navbar-nav">
+                            <ul class="navbar-nav " style = "margin-right: 30%; font : bold">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="">Home</a>
+                                    <a class="nav-link" href="/">Home</a>
+                                </li>
+                                {% if user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'blog:post_list' %}">Blog</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="{% url 'blog:post_list_friend' %}">Friends</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="blog/" >Blog</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="friends/">Friends</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">MyPage</a>
-                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        MyPage
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="{% url 'accounts:profile' %}">프로필</a>
+                                        <a class="dropdown-item" href="{% url 'accounts:friendList' %}">친구 관리</a>
+                                        <a class="dropdown-item" href="{% url 'accounts:logout' %}">로그아웃</a>
+                                    </div>
+                                </li>  
+                                {% endif %}                              
                             </ul>
-                        </div>
-                        <div class="menu_btn">
-                            <a href="#" class="btn_1 d-none d-sm-block">book a tabel</a>
-                        </div>
+                        </div>                        
                     </nav>
                 </div>
             </div>
@@ -77,7 +85,7 @@
     <!-- banner part start-->
     <section class="banner_part">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-start">
                 <div class="col-lg-6">
                     <div class="banner_text">
                         <div class="banner_text_iner">
@@ -87,10 +95,10 @@
                             <div class="banner_btn">
                                 {% if not user.is_authenticated %}
                                 <div class="banner_btn_iner">
-                                    <a href="accounts/signup/" class="btn_2"> 회원 가입  <img src="{% static 'img/icon/left_1.svg' %}" alt=""></a>
+                                    <a href="{% url 'accounts:signup' %}" class="btn_2"> 회원 가입  <img src="{% static 'img/icon/left_1.svg' %}" alt=""></a>
                                 </div>
                                 <div class="banner_btn_iner">
-                                    <a href="accounts/login/" class="btn_2"> 로그인 <img src="{% static 'img/icon/left_1.svg' %}" alt=""></a>
+                                    <a href="{% url 'accounts:login' %}" class="btn_2"> 로그인 <img src="{% static 'img/icon/left_1.svg' %}" alt=""></a>
                                 </div>
                                 {% endif %}
                                 {% if user.is_authenticated %}
@@ -107,62 +115,7 @@
     </section>
     <!-- banner part start-->
 
-    <!--::review_part start::-->
-    <section class="review_part gray_bg section_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-5">
-                    <div class="section_tittle">
-                        <p>Testimonials</p>
-                        <h2>Customers Feedback</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-11">
-                    <div class="client_review_part owl-carousel">
-                        <div class="client_review_single media">
-                            <div class="client_img align-self-center">
-                                <img src="{% static 'img/client/client_1.png' %}" alt="">
-                            </div>
-                            <div class="client_review_text media-body">
-                                <p>Also made from. Give may saying meat there from heaven it lights face had is gathered
-                                    god dea earth light for life may itself shall whales made they're blessed whales
-                                    also made from give
-                                    may saying meat. There from heaven it lights face had amazing place</p>
-                                <h4>Mosan Cameron, <span>Executive of fedex</span></h4>
-                            </div>
-                        </div>
-                        <div class="client_review_single media">
-                            <div class="client_img align-self-center">
-                                <img src="{% static 'img/client/client_1.png' %} " alt="">
-                            </div>
-                            <div class="client_review_text media-body">
-                                <p>Also made from. Give may saying meat there from heaven it lights face had is gathered
-                                    god dea earth light for life may itself shall whales made they're blessed whales
-                                    also made from give
-                                    may saying meat. There from heaven it lights face had amazing place</p>
-                                <h4>Mosan Cameron, <span>Executive of fedex</span></h4>
-                            </div>
-                        </div>
-                        <div class="client_review_single media">
-                            <div class="client_img align-self-center">
-                                <img src="{% static 'img/client/client_1.png' %}" alt="">
-                            </div>
-                            <div class="client_review_text media-body">
-                                <p>Also made from. Give may saying meat there from heaven it lights face had is gathered
-                                    god dea earth light for life may itself shall whales made they're blessed whales
-                                    also made from give
-                                    may saying meat. There from heaven it lights face had amazing place</p>
-                                <h4>Mosan Cameron, <span>Executive of fedex</span></h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--::review_part end::-->
+    
 
     <!-- footer part start-->
     <footer class="footer-area">
