--- a/blog/templates/accounts/login.html
+++ b/blog/templates/accounts/login.html
@@ -104,10 +104,7 @@
                                 </div>
                                 <br/>
                                 
-                                <button type="submit" class="btn btn-primary rounded rounded-pill primary-bg text-white w-30 btn_4 col-md-6" style="border: none;"> 로그인 </button>
-                                
-
-                                
+                                <button type="submit" class="btn btn-primary rounded rounded-pill primary-bg text-white w-30 btn_4 col-md-6" style="border: none; transition : none;"> 로그인 </button> 
                             </form>
                         </div>
                     </div>
