--- a/blog/templates/accounts/signup.html
+++ b/blog/templates/accounts/signup.html
@@ -105,7 +105,7 @@
                                     <div class = "col-md-6"> {{ form.password2.label_tag }} </div>
                                     <div class = "col-md-6"> {{ form.password2 }} </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary rounded rounded-pill primary-bg text-white w-30 btn_4 col-md-6" style="border: none;"> 회원가입 </button>
+                                <button type="submit" class="btn btn-primary rounded rounded-pill primary-bg text-white w-30 btn_4 col-md-6" style="border: none; transition : none;"> 회원가입 </button>
                             </form>
                             
                         </div>
