--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -72,17 +72,28 @@
     <!-- Header part end-->
 
 <!--================Blog Area =================-->
-<section class="blog_area single-post-area section_padding">
+<section class="blog_area single-post-areas">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 posts-list">
+            <div class="col-lg-12 posts-list"> 
+                <div style="text-align: right;">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link col-8" href="{% url 'blog:post_edit' post.pk %}"> 수정 </a>
+                            <a class="nav-link col-8" href="{% url 'blog:post_delete' post.pk %}"> 삭제 </a>
+                        </li>                        
+                    </ul>
+                </div> 
             <div class="single-post">
                 <div class="feature-img">
                     <img class="card-img rounded-0" src="{{ post.image_url }}" alt="" style="width: 60%;" >
                 </div>
                 <div class="blog_details">
                     <h2>{{ post.title }}</h2>
-                    <p> 조회수 {{post.view_count}} </p>                  
+                    <p> {{post.view_count}} views </p>                  
+                    <div style="width: 70%;">
+                        <iframe width="100%" height="315" src="{{ post.movieAd }}" frameborder="0" allowfullscreen></iframe>
+                    </div>                    
                     <p class="excert">
                         {{ post.content }}
                     </p>                    
